[tool.poetry]
authors = []
description = ""
name = "api"
packages = [
  {include = "api"},
]
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
mypy = "^0.950"
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.10.1"
google-auth = "^2.16.0"
httpx = "^0.23.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
